before I start messing around with the dolphin data

--- a/dsm-paper.tex
+++ b/dsm-paper.tex
@@ -15,10 +15,10 @@ Len Thomas$^{2}$.}
 \item Department of Natural Resources Science, University of Rhode Island, Kingston, Rhode Island 02881, USA
 \item Centre for Research into Ecological and Environmental Modelling,\\ The Observatory, University of St. Andrews, St. Andrews KY16 9LZ, UK
 }
-\nwords{4373}
+\nwords{5151 UPDATE}
 \ntables{0}
 \nfig{6}
-\nref{33}
+\nref{33 UPDATE}
 
 \corr{\url{dave@ninepointeightone.net}}
 
@@ -57,23 +57,51 @@ Distance sampling takes plot sampling (counting all the individuals or groups of
 \end{equation}
 where $A$ is the area of the study region, $a$ is the area covered by the survey (i.e., the sum of the areas of all of the strips/circles) and the summation takes place over the $n$ observed groups, each of size $s_i$ (if individuals are observed, $s_i=1 \forall i$). \citep[Chapter 3]{Buckland:2001vm}. In general, distance sampling is more efficient than plot sampling because a much higher proportion of observations can be used in the analysis. Often up to half the observations in a plot sampling data set are discarded to ensure the assumption of certain detection is met. In contrast, distance sampling uses observations that would have been discarded to model the detection (although typically some detections are discarded beyond a given \textit{truncation distance} during analysis).
 
-When fitting the detection function in a distance sampling analysis, one assumes that the objects of interest are distributed according to some process \citep[Section 2.1]{Buckland:2001vm}. It is usually possible to design surveys such that a homogenous process can be assumed so that (with respect to the line/point) objects are distributed uniformly. This can be achieved by ensuring that  transects are randomly located.
-
 Estimators such as eqn (\ref{ht-est}) rely on the design of the study to ensure that abundance estimates over the whole study area (scaling up from the covered region) are valid. In contrast this article focusses on \textit{model-based} inference to extrapolate to a larger study area. Specifically, we consider the use of spatially explicit models to investigate the response of biological populations to biotic and abiotic covariates that vary over the study region. A spatially-explicit model can explain the between-transect variation (which is often a large component of the variance in design-based estimates) and so using a model-based approach can lead to smaller variance in estimates of abundance. Model-based inference also enables the use of data from opportunistic surveys, for example, incidental data arising from ``ecotourism'' cruises \citep{Williams:2006tz}. 
 
 Our aims in creating a spatial model of a biological population are usually two-fold: (i) estimating overall abundance and (ii) investigating the relationship between abundance and environmental covariates. As with any predictions that are outside the range of the data, one should heed the usual warnings regarding extrapolation. For example, if a model contains elevation as a covariate, predictions at high, unsampled elevations are unlikely to be reliable. Frequently, maps of abundance or density are required and any spurious predictions can be visually assessed, as well as by plotting a histogram of the predicted values. A sensible definition of the region of interest avoids prediction outside the range of the data.
 
-In this article we review the current landscape of spatial modelling of distance sampling data, illustrating some recent developments most useful to applied ecologists. The methods discussed have been available in the popular Windows application Distance \citep{Thomas:2010cf} for some time but the recent advances covered here have been implemented in a new \textsf{R} package, \texttt{dsm} \citep{dsm-package}  and are soon to incorporated into Distance.
+In this article we review the current landscape of spatial modelling of distance sampling data, illustrating some recent developments most useful to applied ecologists. The methods discussed have been available in the popular Windows application Distance \citep{Thomas:2010cf} for some time but the recent advances covered here have been implemented in a new \textsf{R} package, \texttt{dsm} (\cite{Miller:2013to})  and are soon to incorporated into Distance.
 
-Throughout this article a motivating data set is used to illustrate the methods. These data are from a combination of several shipboard surveys conducted on several cetacean species in the Gulf of Mexico. We investigate 47 observations of groups of pantropical spotted dolphins (\textit{Stenella attenuata}); group size was recorded, as well as the Beaufort sea state at the time of the observation. Coordinates for each observation and bathymetry data were available as covariates for the analysis. A complete example analysis is provided as an online appendix. The data used in the analysis are available in the \texttt{dsm} package and Distance.
+\textbf{[[this needs to go somewhere]] Throughout this article a motivating data set is used to illustrate the methods. These data are from a combination of several shipboard surveys conducted on several cetacean species in the Gulf of Mexico. We investigate 47 observations of groups of pantropical spotted dolphins (\textit{Stenella attenuata}); group size was recorded, as well as the Beaufort sea state at the time of the observation. Coordinates for each observation and bathymetry data were available as covariates for the analysis. A complete example analysis is provided as an online appendix. The data used in the analysis are available in the \texttt{dsm} package and Distance.}
 
-The rest of the article follows this structure: we first introduce the density surface modelling approach of \cite{Hedley:2004et}; explain how to estimate abundance and uncertainty; describe recent advances and provide practical advice regarding model fitting, formulation and checking. Before concluding, we review alternative (but less mature) methods which take a more direct approach to modelling spatial distance sampling data.
+The rest of the article follows this structure: we first review approaches for the spatial modelling of distance sampling data before focussing on the density surface modelling approach of \cite{Hedley:2004et}; explain how to estimate abundance and uncertainty; describe recent advances and provide practical advice regarding model fitting, formulation and checking. Finally we discuss future directions for research in spatially modelling distance sampling data.
+
+
+\section*{Approaches to spatial modelling of distance sampling data}
+\label{s:approaches}
+
+Modelling of spatially referenced distance sampling data is in essence the same as modelling spatially-referenced count data, with the additional information provided by collecting distances in order to account for imperfect detection of the species in question. We now review recent efforts to model such data; some consist of two steps (correction for imperfect detection, then spatial modelling), while others jointly estimate the relevant parameters. We begin with two-stage approaches and then move on to one-stage approaches.
+
+\subsection*{Two-stage approaches}
+
+The main focus for this article is the ``count model'' of \cite{Hedley:2004et}, we will henceforth refer to this approach as \textit{density surface modelling} (DSM). Modelling proceeds in two stages: first a detection function is fitted to the distance data to obtain detection probabilities for groups (flocks, pods etc) or individuals. Counts are allocated to a series of segments (contiguous transect sections) which have their areas multiplied by the detection probabilities. A generalised additive model \cite[GAM; e.g.][]{Wood:2006wz} is then constructed with the per-segment counts as the response. GAMs provide an extremely flexible class of models which include generalized linear models \citep[GLMs;][]{McCullagh:1989ux} but extend them with the addition of splines to create smooth functions of covariates, random effects terms and correlation structures (amongst other extensions). This article aims to cover other recent advances using this approach so we refer readers to the later sections of the paper for details of developments since \cite{Hedley:2004et}.
+
+\cite{Niemi:2010kx} proposed a Bayesian point process approach. The density of the objects is described by an intensity function, which included spatially-referenced covariates. Model fitting proceeded in two stages: first the detection function was fitted, then the spatial model (via MCMC) assuming the detection function parameters were known, so detection function uncertainty was not incorporated in the spatial model (though an extension that incorporates uncertainty is, however, feasible), the model also does not account for group size this could be included by considering a marked point process \citep[Section 5.5]{cox1980point}.
+
+\cite{VerHoef:2013ky} model seal populations in the Bering sea by combining a detection function and including additional information from a model of seal haul-outs on ice (both estimated using frequentist methods) with a Bayesian spatial model. The detection function and haul-out model correct the observed density estimates which are then modelled using a Bayesian hierarchical model for the spatial component which itself is split into a presence/absence part (to allow modelling of the large number of zeros in the data) and a density portion (which also accounts for spatial autocorrelation). The authors show that that when extra information is available (such as the haul-out data collected from tags on the seals), this can be incorporated into a model, giving additional insight and interpretability to results.
+
+Two-stage models have the disadvantage of requiring that uncertainty from both parts of the model must be combined. Appropriately combining uncertainty from the detection function and the spatial model can be tricky and ignoring uncertainty from one of the sources can lead to falsely narrow confidence intervals for abundance estimates. More information regarding how this is addressed for DSMs is given in the section ``Recent developments'', below.
+
+We note that there are many approaches to modelling spatially embedded count data (for example, random forests, \cite{Breiman:2001wf}; boosted regression trees, \cite{Friedman:2002um}; \cite{Oppel:2011tv} provide an overview of such methods for marine bird modelling). Also worthy of note is the approach of \cite{Barry:2002bm} using a two-stage approach to model presence/absence then spatial pattern (both via GAMs) in order to account for zero-inflation. Any of these methods could potentially be adapted into a two-stage approach for distance sampling data by adjusting the counts but that they all fall victim to the above issue of combining uncertainties.
+
+\subsection*{One-stage approaches}
+
+Rather than fitting two separate models, many recent articles have combined these two steps (most via hierarchical Bayesian methods). The first of these chronologically was \cite{Royle:2004tu}, formulating an unconditional likelihood per-point/line that is a function of the unobserved transect abundances. These unobserved abundances were treated as (Poisson or negative binomial) random effects, which were then integrated out to give a per-transect likelihood which is a function only of detection function parameters and parameters of the random effects (linear functions of the environmental covariates). Due to the multinomial nature of the per-transect likelihood proposed, distance data must be binned, resulting in a loss of information (an arbitrarily large number of bins could be used as an approximation to continuous data, though this is potentially computationally intensive). \cite{Chelgren:2011us} proposed replacing the multinomial per-transect likelihood with a binomial distribution multiplied by a detection function. The binomial term is effectively the collapsing of the multinomial bins into one very large bin and gives the number of animals captured in the transect, thus allowing the use of exact distances.
+
+The work of \cite{Schmidt:2011ec} takes a somewhat similar approach to \cite{Royle:2008wc}, building a presence/absence-type model for groups, augmenting the data with unobserved groups (similar to the approach taken in \cite{Royle:2008wc}). The authors then used a Poisson distribution to model group size (using a random effect to incorporate overdispersion), combining these parts to give a model of individual abundance. The authors used the Distance software \citep{Thomas:2010cf} to determine the form of the detection function but conducted all parameter estimation (including detection function parameters) as part of one hierarchical Bayesian model (hence we consider this a one-step approach). \cite{Conn:2012bx} also use a hierarchical Bayesian model but in terms of abundance rather than density using a super-population/data augmentation approach (as in \cite{Link:2009wv}). In their formulation, the whole population within the study region is modelled, not just those animals observed during the survey.
+
+\cite{Moore:2011jf} adopt a hierarchical Bayesian state-space model, separating the problem into an observation and process components. The process component describes the underlying population density as it changes over time and space (though the authors only include strata as a spatial component). The observation part of the model then links the process model to the data via the detection function. 
+
+A Bayesian formulation may be advantageous as it allows for easy inclusion of random effects as well as additional information from other sources and experiments. A one-step procedure means that variance estimates include observation and process uncertainty without need for additional calculations.
+
+Outside of the Bayesian world, \cite{Johnson:2010gf} proposed a point process-based model for distance sampling data. They first assumed that the locations of all individuals in the survey area (not just those observed) form a realisation of a Poisson process. Parameters of the intensity function were then estimated via standard maximum likelihood methods for point processes \citep{Baddeley:2000to}. In contrast to \cite{Hedley:2004et}, all parameters were estimated jointly so uncertainty from both the spatial pattern and the detection function was incorporated into variance estimates of the abundance. This also ensures that correlations between the detection function and underlying point process are estimated correctly (and do not falsely inflate or deflate variance estimates). The authors also addressed the issue of overdispersion unmodelled by spatial covariates (i.e. counts that do not follow a Poisson mean-variance relationship) using a post-hoc correction factor.
 
 
 \section*{Density surface modelling}
 \label{s:dsm}
 
-This section focuses on modelling the density/abundance estimation stage of distance sampling, using the ``count model'' of \cite{Hedley:2004et}, which we refer to as \textit{density surface modelling} (DSM). Both line and point transects can be used but if lines are used then they are are split into contiguous \textit{segments} (indexed by $j$), which are of length $l_j$. Segments should be small enough such that neither density of objects or covariate values vary appreciably within a segment (usually making the segments approximately square, $2w\times 2w$, is sufficient). Count or estimated abundance is then modelled as a (sum of) smooth function(s) of covariates using a generalized additive model \cite[GAM; e.g.][]{Wood:2006wz}. For each segment or point, the response is modelled as a function of environmental covariates that are measured at the segment/point level ($z_{jk}$ with $k$ indexing the covariates, e.g., location, sea surface temperature, weather conditions). The area of each segment enters the model as (or as part of) an offset: the area of segment $j$ is $A_j = 2wl_j$ and for point $j$ is $A_j=\pi w^2$ (where $w$ is the truncation distance). 
+This section focuses on modelling the density/abundance estimation stage of the DSM approach introduced above. Both line and point transects can be used, but if lines are used then they are are split into contiguous \textit{segments} (indexed by $j$), which are of length $l_j$. Segments should be small enough such that neither density of objects nor covariate values vary appreciably within a segment (usually making the segments approximately square, $2w\times 2w$, is sufficient). Count or estimated abundance is then modelled as a (sum of) smooth function(s) of covariates using a generalized additive model. For each segment or point, the response is modelled as a function of environmental covariates that are measured at the segment/point level ($z_{jk}$ with $k$ indexing the covariates, e.g., location, sea surface temperature, weather conditions). The area of each segment enters the model as (or as part of) an offset: the area of segment $j$ is $A_j = 2wl_j$ and for point $j$ is $A_j=\pi w^2$ (where $w$ is the truncation distance). 
 
 We begin by describing a formulation where only covariates measured per-segment (e.g. habitat, Beaufort sea state) are included in the detection function. Below, we expand this simple formulation to include observation level covariates (e.g., group size, species)
 
@@ -169,7 +197,7 @@ The Tweedie distribution offers a flexible alternative to the quasi-Poisson and 
 
 Fig. \ref{flow} shows a flow diagram of the modelling process for creating a DSM. The diagram shows which methods are compatible with each other and what the options are for modelling a particular data set.
 
-In our experience, it is sensible to obtain a detection function that fits the data as well as possible and only after a satisfactory detection function has been obtained, begin spatial modelling. Model selection for the detection function can be performed using AIC and model checking using goodness-of-fit tests given in \cite[Section 11.11]{burnham:2004vd}.  If animals occur in groups rather than individually, bias can be incurred due to the higher visibility of larger groups. It may then be necessary to include size as a covariate in the detection function \citep[see][Section 4.8.2.4]{Buckland:2001vm}.
+In our experience, it is sensible to obtain a detection function that fits the data as well as possible and only after a satisfactory detection function has been obtained, begin spatial modelling. Model selection for the detection function can be performed using AIC and model checking using goodness-of-fit tests given in \cite[Section 11.11]{burnham:2004vd}.  If animals occur in groups rather than individually, bias can be incurred due to the higher visibility of larger groups. It may then be necessary to include size as a covariate in the detection function \citep[see][Section 4.8.2.4]{Buckland:2001vm}. For some species group size may change according to location, \cite{Ferguson:2006ex} use two GAMs (one to model observed groups and one to model the group size) to deal with spatially-varying group size amongst delphinids, though the authors are not able calculate the variance of the resulting predictions.
 
 Smooth terms can be selected using (approximate) $p$-values, as one would usually for a GAM. An additional useful technique for covariate selection is to use an extra penalty for each term in the GAM allowing smooth terms to be removed from the model during fitting \citep[illustrated in the example analysis;][]{Wood:ub}. Smoothness selection is performed by generalized cross validation (GCV) score, unbiased risk estimator (UBRE) or restricted maximum likelihood (REML) score. When model covariates are effectively functions of one another (e.g. depth could be written as a function of location) GCV and UBRE can suffer from optimisation failures \cite[][Section 4.5.3]{Wood:2006wz} which can lead to unstable models \citep[][]{Wood:ub}. To avoid these issues REML is recommended for smoothness selection when many spatially-referenced covariates are used. A significant drawback is that REML scores can only be used to compare models with the same fixed effects \citep[i.e. linear terms;][]{Wood:ub}, though the $p$-value and additional penalty techniques described above can be used to select model terms. We highly recommend the use of standard GAM diagnostic plots; \cite{Wood:2006wz} provides further practical information on GAM model selection and fitting.
 
@@ -177,19 +205,6 @@ In the analysis of the dolphin data, we included a smooth of location. This not 
 
 In the analysis presented here we transform the covariates for spatial location from latitude and longitude to kilometres north and east of the centre of the survey region at $(27.01^\circ, -88.3^\circ)$. This is because the bivariate smoother used \citep[the thin plate spline;][]{Wood:2003tc} is isotropic: there is only one parameter controlling the smoothness in both directions. Moving one degree in latitude is not the same as moving one degree in longitude and so using kilometres from the centre of the study region makes the covariates isotropic. Using SI units throughout makes analysis easier.
 
-
-\section*{Direct modelling of the spatial point process}
-\label{s:direct}
-
-Rather than use a GAM to model the spatially explicit part of the model, two recent articles \citep{Johnson:2010gf,Niemi:2010kx} have used a point process \citep{cox1980point} approach \citep[which was formulated by][]{Hedley:2004et}. In both cases, the density of the objects is described by an intensity function, which can include spatially-referenced covariates.
-
-\cite{Johnson:2010gf} proposed a point process-based model for distance sampling data. They first assumed that the locations of all individuals in the survey area (not just those observed) form a realisation of a Poisson process. Parameters of the intensity function were then estimated via standard maximum likelihood methods for point processes \citep{Baddeley:2000to}. In contrast to \cite{Hedley:2004et}, all parameters were estimated jointly so uncertainty from both the spatial pattern and the detection function was incorporated into variance estimates of the abundance. This also ensures that correlations between the detection function and underlying point process are estimated correctly (and do not falsely inflate or deflate variance estimates). The authors also addressed the issue of overdispersion unmodelled by spatial covariates (i.e. counts that do not follow a Poisson mean-variance relationship) using a post-hoc correction factor.
-
-\cite{Niemi:2010kx} also used Poisson processes but incorporated them into a fully Bayesian approach. Model fitting proceeded in two stages: first the detection function was fitted, then the spatial model (via MCMC) assuming the detection function parameters were known, so detection function uncertainty was not incorporated in the spatial model (an extension that incorporates uncertainty is, however, feasible).
-
-Both of the above Poisson process models do not account for group size, but both state that this could be included by considering a marked point process \citep[Section 5.5]{cox1980point}. It should be noted that the loss of efficiency from using DSM is not large \citep[p. 313]{Buckland:2004ts} because usually distances to detected objects from the line contain little information about spatial variation due to the width of the transects relative to their lengths and how small circles are compared to the study area.
-
-A final example of direct modelling of density is given in \cite{Royle:2004tu}. The authors formulated an unconditional likelihood per-point/line, which is a function of the unobserved transect abundances. These unobserved abundances were treated as (Poisson or negative binomial) random effects, which were then integrated out to give a per-transect likelihood which is a function only of detection function parameters and parameters of the random effects (linear functions of the environmental covariates). Due to the multinomial nature of the per-transect likelihood proposed, distance data must be binned, resulting in a loss of information. Although an arbitrarily large number of bins could be used as an approximation to continuous data, this is potentially computationally intensive.
 
 
 \section*{Discussion}
@@ -199,7 +214,7 @@ The use of model-based inference for determining abundance and spatial distribut
 
 Unbiased estimates are dependent upon either (i) distribution of sampling effort being random throughout the study area (for design-based inference) or (ii) model correctness (for model-based inference).  It is easier to have confidence in the former rather than in the latter because our models are always wrong. Nevertheless model-based inference will play an increasing role in population assessment as the availability of spatially-referenced data increases.
 
-The field is quickly evolving to allow modelling of more complex data building on the basic ideas of density surface modelling. We expect to see large advances in two areas: temporal inferences and the handling of spatial correlation. These should become more mainstream as modern spatio-temporal modelling techniques are adopted. \cite{Petersen:2011vy} provided a very basic framework for temporal modelling; their model included ``before'' and ``after'' smooth terms to quantify the impact of the construction of an offshore windfarm. Spatial autocorrelation can be accounted for via approaches that explicitly introduce correlations such as generalized estimating equations \cite[GEEs;][]{Hardin:2003uf} or via mechanisms such as that of \cite{Skaug:2006gs},  which allowed observations to cluster according to one of several states (such as high vs low density patches, possibly in response to temporary agglomerations of prey, although the mechanism is unimportant). These advances should assist both modellers and wildlife managers to make optimal conservation decisions. 
+The field is quickly evolving to allow modelling of more complex data building on the basic ideas of density surface modelling. We expect to see large advances in temporal inferences and the handling of zero-inflated data and spatial correlation. These should become more mainstream as modern spatio-temporal modelling techniques are adopted. \cite{Petersen:2011vy} provided a very basic framework for temporal modelling; their model included ``before'' and ``after'' smooth terms to quantify the impact of the construction of an offshore windfarm. Zero-inflation in count data may be problematic and two-stage approaches such as \cite{Barry:2002bm} as well as more flexible response distributions made possible by \cite{Rigby:2005wb} have yet to be exploited by those using distance sampling data. Spatial autocorrelation can be accounted for via approaches that explicitly introduce correlations such as generalized estimating equations \cite[GEEs;][]{Hardin:2003uf} or via mechanisms such as that of \cite{Skaug:2006gs},  which allowed observations to cluster according to one of several states (such as high vs low density patches, possibly in response to temporary agglomerations of prey, although the mechanism is unimportant). These advances should assist both modellers and wildlife managers to make optimal conservation decisions. 
 
 Recent advances in Bayesian computation (INLA; Rue et al, 2009), make one-step, Bayesian, density surface models computationally feasible (as INLA is an alternative to MCMC). We anticipate that such a direct modelling technique will dominate future developments in the field.
 
