--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 25 Feb 2013.
+%% Created using Papers on Mon, 06 May 2013.
 %% http://mekentosj.com/papers/
 
 @article{Baddeley:2000to,
@@ -9,22 +9,48 @@ year = {2000},
 volume = {42},
 number = {3},
 pages = {283--322},
+publisher = {Wiley Online Library},
+read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:55:50GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-04-29T15:32:27GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf},
 file = {{Baddeley--2000.pdf:/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/84517B79-4C59-42FF-A6E3-AD735D646120}}
 }
 
+@article{Barry:2002bm,
+author = {Barry, Simon C and Welsh, A H},
+title = {{Generalized additive modelling and zero inflated count data}},
+journal = {Ecological modelling},
+year = {2002},
+volume = {157},
+number = {2-3},
+pages = {179--188},
+month = nov,
+doi = {10.1016/S0304-3800(02)00194-1},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-10-23T00:05:42GMT+00:00},
+date-modified = {2013-05-06T15:13:33GMT+00:00},
+abstract = {This paper describes a flexible method for modelling zero inflated count data which are typically found when trying to model and predict species distributions. Zero inflated data are defined as data that has a larger proportion of zeros than expected from pure count ( ... 
+},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0304380002001941},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2002/Barry-Ecological_modelling-2002.pdf},
+file = {{Barry-Ecological_modelling-2002.pdf:/Users/dill/Dropbox/Papers2/2002/Barry-Ecological_modelling-2002.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1016/S0304-3800(02)00194-1}}
+}
+
 @techreport{Bravington:2010vw,
-author = {Bravington, M.V. and Hedley, Sharon L},
+author = {Bravington, Mark V and Hedley, Sharon L},
 title = {{Antarctic minke whale abundance from the SPLINTR model: some'reference'dataset results and'preferred'estimates from the second and third circumpolar IDCR/SOWER surveys}},
 year = {2010},
+publisher = {Paper SC/62/IA12 presented to the IWC Scientific Committee},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-02T17:46:13GMT+00:00},
 url = {http://www.iwcoffice.org/_documents/sci_com/SC62docs/SC-62-IA12Rev.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf},
 file = {{Bravington--2010.pdf:/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf:application/pdf}},
@@ -32,18 +58,31 @@ uri = {\url{papers2://publication/uuid/C6C86554-53D5-4A16-BE5A-B894AFD08CC5}}
 }
 
 @techreport{Bravington:2009vo,
-author = {Bravington, M.V. and Hedley, Sharon L},
+author = {Bravington, Mark V and Hedley, Sharon L},
 title = {{Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model}},
-institution = {International Whaling Commisson Scientific Committee},
-number = {Paper SC/61/IA14},
 year = {2009},
+publisher = {Paper SC/61/IA14 presented to the IWC Scientific Committee},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-02T17:46:13GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
 file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/323A731F-7B00-4AAA-9BE4-96F18CCC428D}}
+}
+
+@article{Breiman:2001wf,
+author = {Breiman, L},
+title = {{Random forests}},
+journal = {Machine learning},
+year = {2001},
+rating = {0},
+date-added = {2013-05-06T14:44:02GMT+00:00},
+date-modified = {2013-05-06T14:53:04GMT+00:00},
+abstract = {Page 1. Machine  Learning , 45 , 5 -- 32 , 2001 c 2001 Kluwer Academic Publishers. ... is Page 2. 6 L . BREIMAN generated as the counts in N boxes resulting from N darts thrown at random at the boxes, where N is number of examples in the training set. ... 
+},
+url = {http://link.springer.com/article/10.1023/A:1010933404324},
+uri = {\url{papers2://publication/uuid/C0B8D2CE-EB45-4674-8629-C68D3EA3CD67}}
 }
 
 @book{Buckland:2004ts,
@@ -54,7 +93,7 @@ year = {2004},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:02:27GMT+00:00},
-date-modified = {2013-02-25T15:21:42GMT+00:00},
+date-modified = {2013-04-17T20:48:42GMT+00:00},
 uri = {\url{papers2://publication/uuid/1B0A4642-4BC9-4EDA-8F3B-E8C43E2221B9}}
 }
 
@@ -66,7 +105,7 @@ year = {2001},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T17:59:25GMT+00:00},
-date-modified = {2013-02-25T15:21:42GMT+00:00},
+date-modified = {2013-04-17T20:48:42GMT+00:00},
 uri = {\url{papers2://publication/uuid/628737E2-D98A-42CD-8546-93F1C833D11F}}
 }
 
@@ -79,7 +118,7 @@ editor = {Buckland, Stephen T and anderson, D R and Burnham, Kenneth P and Laake
 publisher = {Oxford University Press},
 rating = {0},
 date-added = {2013-02-25T14:58:33GMT+00:00},
-date-modified = {2013-02-25T15:21:42GMT+00:00},
+date-modified = {2013-04-17T20:48:42GMT+00:00},
 uri = {\url{papers2://publication/uuid/35D8D7E1-3D32-4370-BBBB-4D83DBD63510}}
 }
 
@@ -99,12 +138,31 @@ file = {{Candy-CCAMLR_Science-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Candy-CC
 uri = {\url{papers2://publication/uuid/C3059294-39F2-44B8-84DE-BC66DA2C3835}}
 }
 
+@article{Chelgren:2011us,
+author = {Chelgren, NATHAN D and Samora, BARBARA and Adams, MICHAEL J and McCreary, BROME},
+title = {{Using spatiotemporal models and distance sampling to map the space use and abundance of newly metamorphosed western toads (Anaxyrus boreas)}},
+journal = {Herpetological Conservation and Biology},
+year = {2011},
+volume = {6},
+number = {2},
+pages = {175--190},
+read = {Yes},
+rating = {0},
+date-added = {2013-04-29T19:34:55GMT+00:00},
+date-modified = {2013-05-02T15:45:59GMT+00:00},
+url = {http://www.herpconbio.org/Volume_6/Issue_2/Chelgren_etal_2011.pdf},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Chelgren--2011.pdf},
+file = {{Chelgren--2011.pdf:/Users/dill/Dropbox/Papers2/2011/Chelgren--2011.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/C8330FE7-600B-40D0-A4A4-8996DD6BC3DB}}
+}
+
 @article{Cleveland:1979vd,
 author = {Cleveland, W S},
 title = {{Robust locally weighted regression and smoothing scatterplots}},
 journal = {Journal of the American Statistical Association},
 year = {1979},
 pages = {829--836},
+publisher = {JSTOR},
 rating = {0},
 date-added = {2012-06-05T03:36:13GMT+00:00},
 date-modified = {2013-02-25T15:02:23GMT+00:00},
@@ -112,6 +170,26 @@ url = {http://www.jstor.org/stable/10.2307/2286407},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf},
 file = {{Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/A6409608-C46C-440B-9851-8CF07599E25F}}
+}
+
+@article{Conn:2012bx,
+author = {Conn, Paul B and Laake, Jeffrey L and Johnson, Devin S},
+title = {{A Hierarchical Modeling Framework for Multiple Observer Transect Surveys}},
+journal = {PloS one},
+year = {2012},
+volume = {7},
+number = {8},
+pages = {e42294},
+publisher = {Public Library of Science},
+doi = {10.1371/journal.pone.0042294.g001},
+read = {Yes},
+rating = {0},
+date-added = {2013-04-29T15:32:13GMT+00:00},
+date-modified = {2013-05-02T20:46:11GMT+00:00},
+url = {http://dx.plos.org/10.1371/journal.pone.0042294},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2012/Conn--2012.pdf},
+file = {{Conn--2012.pdf:/Users/dill/Dropbox/Papers2/2012/Conn--2012.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1371/journal.pone.0042294.g001}}
 }
 
 @book{cox1980point,
@@ -154,6 +232,7 @@ language = {English},
 rating = {0},
 date-added = {2012-10-25T21:11:27GMT+00:00},
 date-modified = {2013-02-25T15:11:59GMT+00:00},
+url = {http://books.google.com/books?id=gLlpIUxRntoC&dq=an+introduction+to+the+bootstrap&hl=&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/5ED29765-F078-4FC5-A6E3-D160C5309FB5}}
 }
 
@@ -165,17 +244,52 @@ year = {1979},
 volume = {7},
 number = {1},
 pages = {1--26},
+publisher = {Institute of Mathematical Statistics},
 doi = {10.1214/aos/1176344552},
 language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T20:43:14GMT+00:00},
 date-modified = {2013-02-25T15:02:23GMT+00:00},
-abstract = {Abstract We discuss the following problem: given a random sample {\$}\ mathbf {X}=(X{\_}1, X{\_}2,\ cdots, X{\_}n) {\$} from an unknown probability distribution {\$} F {\$}, estimate the sampling distribution of some prespecified random variable {\$} R (\ mathbf {X}, F) {\$}, on the basis of ... 
+abstract = {Abstract We discuss the following problem: given a random sample $\ mathbf {X}=(X_1, X_2,\ cdots, X_n) $ from an unknown probability distribution $ F $, estimate the sampling distribution of some prespecified random variable $ R (\ mathbf {X}, F) $, on the basis of ... 
 },
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Efron-Ann._Statist.-1979.pdf},
 file = {{Efron-Ann._Statist.-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Efron-Ann._Statist.-1979.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1214/aos/1176344552}}
+}
+
+@article{Ferguson:2006ex,
+author = {Ferguson, Megan C and Barlow, Jay and Fiedler, Paul and Reilly, Stephen B and Gerrodette, Tim},
+title = {{Spatial models of delphinid (family Delphinidae) encounter rate and group size in the eastern tropical Pacific Ocean}},
+journal = {Ecological modelling},
+year = {2006},
+volume = {193},
+number = {3},
+pages = {645--662},
+publisher = {Elsevier},
+doi = {10.1016/j.ecolmodel.2005.10.034},
+read = {Yes},
+rating = {0},
+date-added = {2013-04-29T20:12:56GMT+00:00},
+date-modified = {2013-05-02T18:56:40GMT+00:00},
+url = {http://www.sciencedirect.com/science/article/pii/S0304380005004898},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Ferguson-Ecological_modelling-2006.pdf},
+file = {{Ferguson-Ecological_modelling-2006.pdf:/Users/dill/Dropbox/Papers2/2006/Ferguson-Ecological_modelling-2006.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1016/j.ecolmodel.2005.10.034}}
+}
+
+@article{Friedman:2002um,
+author = {Friedman, J H},
+title = {{Stochastic gradient boosting}},
+journal = {Computational Statistics and Data Analysis},
+year = {2002},
+rating = {0},
+date-added = {2013-05-06T14:53:47GMT+00:00},
+date-modified = {2013-05-06T14:54:18GMT+00:00},
+abstract = {... JavaScript required for article outline. Computational  Statistics {\&} Data  Analysis . Volume 38 , Issue 4, 28 February 2002 , Pages 367 -- 378 . Nonlinear Methods and Data Mining. Cover image. Stochastic  gradient  boosting . Jerome H. Friedman . Department of Statistics and Stanford ... 
+},
+url = {http://www.sciencedirect.com/science/article/pii/S0167947301000652},
+uri = {\url{papers2://publication/uuid/A6D8A593-D97B-4C4E-AD27-6E50907391B4}}
 }
 
 @article{GREEN:1995dg,
@@ -217,7 +331,7 @@ uri = {\url{papers2://publication/doi/10.5670/oceanog.2009.42}}
 
 @book{Hardin:2003uf,
 author = {Hardin, J and Hilbe, J},
-title = {{Generalized Estimating Equations}},
+title = {{\emph{Generalized Estimating Equations}}},
 publisher = {Chapman and Hall/CRC, London, UK},
 year = {2003},
 rating = {0},
@@ -239,10 +353,30 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:20:26GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-06T13:55:39GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf},
 file = {{Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1198/1085711043578}}
+}
+
+@article{VerHoef:2013ky,
+author = {Ver Hoef, Jay M and Cameron, Michael F and Boveng, Peter L and London, Josh M and Moreland, Erin E},
+title = {{A spatial hierarchical model for abundance of three ice-associated seal species in the eastern Bering Sea}},
+journal = {Statistical Methodology},
+year = {2013},
+pages = {1--44},
+month = apr,
+publisher = {Elsevier B.V.},
+doi = {10.1016/j.stamet.2013.03.001},
+read = {Yes},
+rating = {0},
+date-added = {2013-04-29T22:02:31GMT+00:00},
+date-modified = {2013-05-06T13:56:01GMT+00:00},
+abstract = {Statistical Methodology, doi:10.1016/j.stamet.2013.03.001},
+url = {http://dx.doi.org/10.1016/j.stamet.2013.03.001},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2013/Ver_Hoef-Statistical_Methodology-2013.pdf},
+file = {{Ver_Hoef-Statistical_Methodology-2013.pdf:/Users/dill/Dropbox/Papers2/2013/Ver_Hoef-Statistical_Methodology-2013.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1016/j.stamet.2013.03.001}}
 }
 
 @article{Johnson:2010gf,
@@ -260,7 +394,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:46:24GMT+00:00},
-date-modified = {2013-02-25T15:21:42GMT+00:00},
+date-modified = {2013-05-02T19:27:51GMT+00:00},
 abstract = {We consider a fully model-based approach for the analysis of distance sampling data. Distance sampling has been widely used to estimate abundance (or density) of animals or plants in a spatially explicit study area. There is, however, no readily available method of making statistical inference on the relationships between abundance and environmental covariates. Spatial Poisson process likelihoods can be used to simultaneously estimate detection and intensity parameters by modeling distance sampling data as a thinned spatial point process. A model-based spatial approach to distance sampling data has three main benefits: it allows complex and opportunistic transect designs to be employed, it allows estimation of abundance in small subregions, and it provides a framework to assess the effects of habitat or experimental manipulation on density. We demonstrate the model-based methodology with a small simulation study and analysis of the Dubbo weed data set. In addition, a simple ad hoc method for handling overdispersion is also proposed. The simulation study showed that the model-based approach compared favorably to conventional distance sampling methods for abundance estimation. In addition, the overdispersion correction performed adequately when the number of transects was high. Analysis of the Dubbo data set indicated a transect effect on abundance via Akaike's information criterion model selection. Further goodness-of-fit analysis, however, indicated some potential confounding of intensity with the detection function.},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf},
 file = {{Johnson-Biometrics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf:application/pdf}},
@@ -280,6 +414,20 @@ date-modified = {2013-02-25T15:02:23GMT+00:00},
 uri = {\url{papers2://publication/uuid/626E6348-3011-4C95-88E0-2872D18033E7}}
 }
 
+@book{Link:2009wv,
+author = {Link, W A and Barker, R J},
+title = {{Bayesian Inference: with ecological applications}},
+publisher = {Academic Press},
+year = {2009},
+rating = {0},
+date-added = {2013-05-02T20:10:57GMT+00:00},
+date-modified = {2013-05-02T20:13:53GMT+00:00},
+abstract = {Statistical theory is primarily a product of the twentieth century. The prevailing school of thought builds on the frequentist philosophy developed by RA Fisher, the eminent biological theorist and experimentalist. Fisher's philosophy has been so thoroughly embraced that it ... 
+},
+url = {http://books.google.com/books?hl=en&lr=&id=hecon2l2QPcC&oi=fnd&pg=PP2&dq=link+barker&ots=S8--1npyLq&sig=TLCsfPaN2IRM1q5Tnl84lTlye1M},
+uri = {\url{papers2://publication/uuid/3BC1A19F-AE25-471E-A858-C83B85FBE9E8}}
+}
+
 @article{Marques:2003vb,
 author = {Marques, FFC and Buckland, Stephen T},
 title = {{Incorporating covariates into standard line transect analyses}},
@@ -291,7 +439,7 @@ pages = {924--935},
 read = {Yes},
 rating = {0},
 date-added = {2011-01-23T23:06:56GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-04-17T20:48:42GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf},
 file = {{Marques-Biometrics-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/431310FD-EE0C-4EFF-BF51-19DE6D44A652}}
@@ -308,7 +456,7 @@ pages = {1229--1243},
 read = {Yes},
 rating = {0},
 date-added = {2010-07-23T21:49:27GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-04-17T20:48:42GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf},
 file = {{Marques-The_Auk-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/BA1139E9-4364-46DD-9DE2-1773FF9679E6}}
@@ -346,6 +494,8 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:34:30GMT+00:00},
 date-modified = {2013-02-25T15:02:23GMT+00:00},
+abstract = {An outline of generalized linear models; Models for continuous data with constant variance; Binary data; Models for polytomous data; Log-linear models; Conditional likelihoods; Models with constant coefficient of variation; Quasi-likelihood functions; Joint modelling of mean and dispersion; Models with additional non-linear parameters; Model checking; Model for survival data; Components of dispersion; Further topics.},
+url = {http://books.google.com/books?id=h9kFH2_FfBkC&printsec=frontcover&dq=mccullugh+nelder&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/1E03DBA3-F2EE-4807-AFFC-053B4E1396A0}}
 }
 
@@ -353,7 +503,6 @@ uri = {\url{papers2://publication/uuid/1E03DBA3-F2EE-4807-AFFC-053B4E1396A0}}
 author = {Miller, David Lawrence and Wood, Simon N},
 title = {{Finite area smoothing with generalized distance splines}},
 pages = {1--27},
-year = {submitted},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-30T20:28:53GMT+00:00},
@@ -367,7 +516,6 @@ uri = {\url{papers2://publication/uuid/D1DB0F02-6C2E-464E-AADD-097F06984A27}}
 author = {Miller, David Lawrence and Jones, Esther and Matthiopoulos, J},
 title = {{Reliable spatial smoothing without edge effects}},
 pages = {1--8},
-year = {in prep.},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-30T20:36:50GMT+00:00},
@@ -377,22 +525,25 @@ file = {{Miller-1.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf:applicati
 uri = {\url{papers2://publication/uuid/7C8EF69D-7597-4316-97B2-E948BC8EC41F}}
 }
 
-
-@Manual{dsm-package,
-  title = {dsm: Density surface modelling of distance sampling data},
-  author = {David L. Miller and Eric Rexstad and Louise Burt and Mark V. Bravington and Sharon Hedley.},
-  year = {2013},
-  note = {R package version 2.0.1},
-  url = {http://cran.r-project.org/package=Distance},
-}
-
-@Manual{Distance-package,
-  title = {Distance: A simple way to fit detection functions to distance sampling data and
-lculate abundance/density for biological populations.},
-  author = {David L. Miller},
-  year = {2012},
-  note = {R package version 0.7.1},
-  url = {http://cran.r-project.org/package=Distance},
+@article{Moore:2011jf,
+author = {Moore, Jeffrey E and Barlow, Jay},
+title = {{Bayesian state-space model of fin whale abundance trends from a 1991-2008 time series of line-transect surveys in the California Current}},
+journal = {Journal of Applied Ecology},
+year = {2011},
+volume = {48},
+number = {5},
+pages = {1195--1205},
+month = jun,
+doi = {10.1111/j.1365-2664.2011.02018.x},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2013-04-29T15:19:57GMT+00:00},
+date-modified = {2013-05-02T19:40:11GMT+00:00},
+url = {http://doi.wiley.com/10.1111/j.1365-2664.2011.02018.x},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Moore-Journal_of_Applied_Ecology-2011.pdf},
+file = {{Moore-Journal_of_Applied_Ecology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Moore-Journal_of_Applied_Ecology-2011.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2011.02018.x}}
 }
 
 @article{Niemi:2010kx,
@@ -408,19 +559,36 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:36:53GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-06T13:48:52GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf},
 file = {{Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1007/s13253-010-0024-8}}
 }
 
+@article{Oppel:2011tv,
+author = {Oppel, S. and Meirinho, A. and Ram{\'\i}rez, I. and Gardner, B. and O'Connell, A.F. and Miller, P.I. and Louzao, M.},
+title = {{Comparison of five modelling techniques to predict the spatial distribution and abundance of seabirds}},
+journal = {Biological Conservation},
+year = {2011},
+publisher = {Elsevier},
+read = {Yes},
+rating = {0},
+date-added = {2012-03-26T02:03:41GMT+00:00},
+date-modified = {2013-05-06T15:19:22GMT+00:00},
+url = {http://www.sciencedirect.com/science/article/pii/S0006320711004319},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Oppel-Biological_Conservation-2011-1.pdf},
+file = {{Oppel-Biological_Conservation-2011-1.pdf:/Users/dill/Dropbox/Papers2/2011/Oppel-Biological_Conservation-2011-1.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/B3C32464-1B9E-431F-AB3B-008034DE8C2E}}
+}
+
 @techreport{Petersen:2011vy,
 author = {Petersen, I K and MacKenzie, M L and Rexstad, E A and Wisz, M S and Fox, A D},
-title = {{Comparing pre- and post-construction distributions of long-tailed ducks \textit{{C}langula hyemalis} in and around the Nysted offshore wind farm, Denmark: a quasi-designed experiment accounting for imperfect detection, local surface features and autocorrelation}},
+title = {{Comparing pre- and post-construction distributions of long-tailed ducks \emph{Clangula hyemalis }in and around the Nysted offshore wind farm, Denmark:
+a quasi-designed experiment accounting for imperfect detection, local surface features and autocorrelation}},
 year = {2011},
-institution = {University of St Andrews},
-number = {CREEM technical report},
+number = {2011-1},
 month = sep,
+publisher = {Centre for Research into Enivironmental and Ecological Modelling},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-19T16:03:03GMT+00:00},
@@ -428,6 +596,21 @@ date-modified = {2013-02-25T15:02:23GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf},
 file = {{Petersen--2011.pdf:/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/F2B0044D-77D4-4974-B57E-55CD381E992A}}
+}
+
+@manual{Team:2013wf,
+title = {{R: A Language and Environment for Statistical Computing}},
+author = {{R Core Team}},
+address = {Vienna, Austria},
+year = {2013},
+publisher = {R Foundation for Statistical Computing},
+isbn = {3-900051-07-0},
+read = {Yes},
+rating = {0},
+date-added = {2013-04-02T18:04:27GMT+00:00},
+date-modified = {2013-05-02T17:43:15GMT+00:00},
+url = {http://www.R-project.org/},
+uri = {\url{papers2://publication/uuid/4390518E-8DD7-408F-BF6D-ED787B5D05AC}}
 }
 
 @article{Ramsay:2002uo,
@@ -438,6 +621,7 @@ year = {2002},
 volume = {64},
 number = {2},
 pages = {307--319},
+publisher = {Wiley Online Library},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:47:43GMT+00:00},
@@ -445,6 +629,23 @@ date-modified = {2013-02-25T15:02:23GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf},
 file = {{Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/0AB944B6-72CC-4119-93DB-EB36FEB64C45}}
+}
+
+@article{Rigby:2005wb,
+author = {Rigby, RA and Stasinopoulos, DM},
+title = {{Generalized additive models for location, scale and shape}},
+journal = {Journal of the Royal Statistical Society-Series C Applied Statistics},
+year = {2005},
+volume = {54},
+number = {3},
+pages = {507--554},
+read = {Yes},
+rating = {0},
+date-added = {2009-11-30T12:47:58GMT+00:00},
+date-modified = {2013-05-06T15:13:31GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2005/Rigby-Journal_of_the_Royal_Statistical_Society-Series_C_Applied_Statistics-2005.pdf},
+file = {{Rigby-Journal_of_the_Royal_Statistical_Society-Series_C_Applied_Statistics-2005.pdf:/Users/dill/Dropbox/Papers2/2005/Rigby-Journal_of_the_Royal_Statistical_Society-Series_C_Applied_Statistics-2005.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/00E9744B-A84D-48DE-98FC-070B3329833C}}
 }
 
 @book{Royle:2008wc,
@@ -457,7 +658,8 @@ isbn = {9780123740977},
 language = {English},
 rating = {0},
 date-added = {2013-01-09T18:11:21GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-06T16:11:57GMT+00:00},
+url = {http://books.google.com/books?id=rDppWpVP6a0C&printsec=frontcover&dq=Hierarchical+modeling+and+inference+in+ecology+inauthor:royle&hl=&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/C505FA0C-6720-42D8-9FB2-9668709A2B5B}}
 }
 
@@ -469,10 +671,11 @@ year = {2004},
 volume = {85},
 number = {6},
 pages = {1591--1597},
+publisher = {Eco Soc America},
 read = {Yes},
 rating = {0},
 date-added = {2011-10-23T11:08:34GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-02T15:48:35GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Royle-Ecology-2004.pdf},
 file = {{Royle-Ecology-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Royle-Ecology-2004.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/F682B433-46A8-4E1B-B2A2-C37793F5AAA2}}
@@ -496,6 +699,27 @@ file = {{Rue-J._R._Statist._Soc._B-2009.pdf:/Users/dill/Dropbox/Papers2/2009/Rue
 uri = {\url{papers2://publication/uuid/C2352D3E-B0A8-45F7-BD65-E4EC4990D929}}
 }
 
+@article{Schmidt:2011ec,
+author = {Schmidt, Joshua H and Rattenbury, Kumi L and Lawler, James P and Maccluskie, Margaret C},
+title = {{Using distance sampling and hierarchical models to improve estimates of Dall's sheep abundance}},
+journal = {The Journal of Wildlife Management},
+year = {2011},
+volume = {76},
+number = {2},
+pages = {317--327},
+month = sep,
+doi = {10.1002/jwmg.216},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2013-04-30T12:49:24GMT+00:00},
+date-modified = {2013-05-06T16:15:22GMT+00:00},
+url = {http://doi.wiley.com/10.1002/jwmg.216},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Schmidt-The_Journal_of_Wildlife_Management-2011.pdf},
+file = {{Schmidt-The_Journal_of_Wildlife_Management-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Schmidt-The_Journal_of_Wildlife_Management-2011.pdf:application/pdf}},
+uri = {\url{papers2://publication/doi/10.1002/jwmg.216}}
+}
+
 @article{ScottHayward:2011tc,
 author = {Scott-Hayward, L A S and MacKenzie, M L and Donovan, C R and Walker, C G and Ashe, E},
 title = {{Complex Region Spatial Smoother (CReSS)}},
@@ -505,7 +729,7 @@ affiliation = {University of St Andrews},
 read = {Yes},
 rating = {0},
 date-added = {2012-06-05T03:37:06GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-06T15:19:19GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2013/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf},
 file = {{Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf:/Users/dill/Dropbox/Papers2/2013/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/34CFE03F-3099-4CE8-B5CD-6907A80F513D}}
@@ -520,7 +744,8 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:06:01GMT+00:00},
-date-modified = {2013-02-25T15:04:00GMT+00:00},
+date-modified = {2013-04-02T15:38:20GMT+00:00},
+url = {http://books.google.com/books?id=bnGaPQAACAAJ&dq=seber&cd=10&source=gbs_api},
 uri = {\url{papers2://publication/uuid/8BEB690D-5749-411B-8CAC-901EB9E6606C}}
 }
 
@@ -556,7 +781,7 @@ doi = {10.1111/j.1365-2664.2009.01737.x},
 read = {Yes},
 rating = {0},
 date-added = {2010-07-14T20:18:23GMT+00:00},
-date-modified = {2013-02-25T15:21:42GMT+00:00},
+date-modified = {2013-04-17T20:48:42GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf},
 file = {{Thomas-Journal_of_Applied_Ecology-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2009.01737.x}}
@@ -574,6 +799,8 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:49:42GMT+00:00},
 date-modified = {2013-02-25T15:02:23GMT+00:00},
+abstract = {Praise for the Second Edition "This book has never had a competitor. It is the only book that takes a broad approach to sampling . . . any good personal statistics library should include a copy of this book." --Technometrics "Well-written . . . an excellent book on an important subject. Highly recommended." --Choice "An ideal reference for scientific researchers and other professionals who use sampling." --Zentralblatt Math Features new developments in the field combined with all aspects of obtaining, interpreting, and using sample data Sampling provides an up-to-date treatment of both classical and modern sampling design and estimation methods, along with sampling methods for rare, clustered, and hard-to-detect populations. This Third Edition retains the general organization of the two previous editions, but incorporates extensive new material--sections, exercises, and examples--throughout. Inside, readers will find all-new approaches to explain the various techniques in the book; new figures to assist in better visualizing and comprehending underlying concepts such as the different sampling strategies; computing notes for sample selection, calculation of estimates, and simulations; and more. Organized into six sections, the book covers basic sampling, from simple random to unequal probability sampling; the use of auxiliary data with ratio and regression estimation; sufficient data, model, and design in practical sampling; useful designs such as stratified, cluster and systematic, multistage, double and network sampling; detectability methods for elusive populations; spatial sampling; and adaptive sampling designs. Featuring a broad range of topics, Sampling, Third Edition serves as a valuable reference on useful sampling and estimation methods for researchers in various fields of study, including biostatistics, ecology, and the health sciences. The book is also ideal for courses on statistical sampling at the upper-undergraduate and graduate levels.},
+url = {http://books.google.com/books?id=qukULxJ--QAC&printsec=frontcover&dq=intitle:sampling+inauthor:thompson&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/F844F284-F8FD-45EB-B547-941C0530D788}}
 }
 
@@ -607,7 +834,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2011-03-16T13:12:31GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-02T17:46:13GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf},
 file = {{Williams-Conservation_Biology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1523-1739.2011.01656.x}}
@@ -624,7 +851,7 @@ pages = {1},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:33:18GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-04-24T16:11:09GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf},
 file = {{Williams--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/20D0DB21-3CAF-4B76-AE38-663AC0ED1433}}
@@ -641,7 +868,7 @@ pages = {3--36},
 read = {Yes},
 rating = {0},
 date-added = {2011-05-11T09:04:24GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-03-14T14:30:35GMT+00:00},
 abstract = {... JR Statist. Soc. B (2011) 73, Part 1, pp. Fast  stable  restricted  maximum  likelihood and marginal likelihood  estimation of semiparametric  generalized  linear  models Simon N. Wood University of Bath, Bath, UK [Received May 2009. Final revision April 2010] Summary. ...},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2011.pdf},
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2011.pdf:application/pdf}},
@@ -659,7 +886,7 @@ pages = {931--955},
 read = {Yes},
 rating = {0},
 date-added = {2010-03-23T20:11:51GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-02T17:46:13GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf},
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/8326BCA7-727A-494B-8BAD-11AC5255B783}}
